--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
@@ -1,3 +1,12 @@
 {% extends 'vaccinerecordapp/navbar.html' %} {% block content %} {% load static %}
 
+
+
+<br />
+<br />
+<br />
+<i class="fas fa-calendar-check fa-5x"></i><h1>No Appointment for Today!</h1>
+
+
+
 {%endblock%}
