--- a/VaccineRecord/static_files/css/home.css
+++ b/VaccineRecord/static_files/css/home.css
@@ -4,13 +4,13 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
-  background:#F3E3D3 !important;
+  background:white !important;
 }
 .user_card {
   width: 350px;
   margin-top: auto;
   margin-bottom: auto;
-  background: #EFCEAD;
+  background: white;
   position: relative;
   display: flex;
   justify-content: center;
@@ -34,8 +34,8 @@ html {
 
 .login_btn {
   width: 100%;
-  background: #744C24 !important;
-  color: white !important;
+  background: #8a8988 !important;
+  color: black !important;
 }
 .login_btn:focus {
   box-shadow: none !important;
