--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/home.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/home.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/home.css'" %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}"/>
 </head>
-<body>
-
+<body >
+	
 	<div class="container h-100">
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
