--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
@@ -7,54 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staff</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #1fbcff;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'dashboard' %}">BaQna</a>
+          <div class = "topnav-left">
+            <a class="navbar-brand" href="{% url 'dashboard' %}"><i class="fas fa-baby"></i></a>
+            <a class="navbar-brand" href="{% url 'dashboard' %}">BaQna</a>
+          </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="topnav-right" id="navbarSupportedContent" >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if request.user|has_group:"staff"%}
               <li class="nav-item">
-               <a class="nav-link active" aria-current="page" href="{% url 'search-create-patient' %}">Patient</a> 
+               <a class="nav-link active" aria-current="page" href="{% url 'search-create-patient' %}">
+                 <i class="fas fa-user"></i>
+                 Patient
+                </a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'tool' %}">Tool</a>
+                <a class="nav-link active" href="{% url 'tool' %}">
+                  <i class="fas fa-tools"></i>
+                  Tool
+                </a>
               </li>
               {% endif %}
-              {% comment %}
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-              {% endcomment %} 
+              
               {% if user.is_authenticated %}
                 <li class = "nav-item">  
-                  <a class = "nav-link" href="#">{{ user.username }}</a>
+                  <a class = "nav-link active" href="#">
+                    <i class="fas fa-user-circle"></i>
+                    {{ user.username }}
+                  </a>
                 </li>
                 <li class = "nav-item">  
-                  <a class="nav-link" href="{% url 'logout'%}">Logout</a>
+                  <a class="nav-link active" href="{% url 'logout'%}">
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                    Logout</a>
                 </li>
               {% endif %}
             </ul>
 
-            <form class="d-flex">
+            <!-- <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            </form> -->
           </div>
         </div>
       </nav>
