--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-create-patient.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-create-patient.html
@@ -1,17 +1,24 @@
 {% extends 'vaccinerecordapp/navbar.html' %} {% block content %} {% load static %}
-<button
-class="btn btn-sm"
-data-bs-toggle="modal"
-data-bs-target="#create-patient"
-style="color: black"
-> Create Patient Account </button>
+ 
+<br />
+<br />
+
+<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    
+    <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#create-patient">
+        <i class="fas fa-folder-plus fa-lg"></i> 
+        Create New Account
+    </button>
+</div>
 
 <table class="table table-striped table-hover">
   <thead>
       <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Username</th>
-          <th colspan="2"></th>
+          <th scope="col">Record No#</th>
+          <th scope="col">Last Name</th>
+          <th scope="col">First Name</th>
+          <th scope="col">Date of Birth</th>
+          <th scope="col">Doctor Assigned</th>
       </tr>
   </thead>
   <tbody>
@@ -19,22 +26,11 @@ style="color: black"
       {% for patient in patients %}
 
       <tr>
-          <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.last_name}}, {{patient.first_name}}</a></td>
-          <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.username}}</a></td>
-          <td>
-              <a href="#" class="btn btn-outline-dark">
-                  <i class="fas fa-edit"></i>
-                  Update Patient
-              </a>
-          </td>
-          <td>
-
-              <button class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#">
-                  <i class="fas fa-trash"></i>
-                  Delete Patient
-              </button>
-
-          </td>
+          <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.id}}</a></td>
+          <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.last_name}}</a></td>
+          <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.first_name}}</a></td>
+          <!-- <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.bday}}</a></td>
+          <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.doctor_assigned}}</a></td> -->
       </tr>
 
       {% endfor %}
