--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
@@ -3,7 +3,7 @@
 <div class="d-flex align-items-start">
 <ul class="nav flex-column " style="background-color:#e3f2fd;;">
     <li class="profile">
-      <a class="nav-link active" href=#>Profile</a>
+      <a class="nav-link active" href="{% url 'update-patient-profile' %}">Profile</a>
     </li>
     <li class="report">
       <a class="nav-link active" href="#">Report</a>
