added vaccine html to view

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
@@ -6,7 +6,7 @@
       <a class="nav-link active" href="{% url 'update-patient-profile' %}">Profile</a>
     </li>
     <li class="report">
-      <a class="nav-link active" href="#">Report</a>
+      <a class="nav-link active" href="{% url 'vaccine-record' %}">Vaccine</a>
     </li>
     <li class="reminder">
       <a class="nav-link" href="#">Reminder</a>
