--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
@@ -117,7 +117,7 @@
             <br>
             <hr>
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-              <a class="btn btn-lg btn-info"  href="{% url 'update-patient-profile' record.id %}" style="color: black">
+              <a class="btn btn-lg btn-info"  href="{% url 'update-patient-profile' %}" style="color: black">
                  Update Profile</a>
             </div>
             </div>
