--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-patient.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-patient.html
@@ -17,6 +17,16 @@
 </div>
 <br>
 
+<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+	<a href="{% url 'register-patient' %}">
+	  <button class="btn btn-sm btn-outline-dark" >
+		  <i class="fas fa-folder-plus fa-lg"></i> 
+		  Create New Account
+	  </button>
+	</a>
+  </div>
+  
+
 <div class="row">
 	<div class="col-md">
 		<div class="card card-body">
