--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
@@ -5,7 +5,7 @@
 <br />
 <br />
 <br />
-<i class="fas fa-calendar-check fa-5x"></i><h1>No Appointment for Today!</h1>
+<h1><i class="fas fa-calendar-check fa-5x"></i>No Appointment for Today!</h1>
 
 
 
