--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-patient.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-patient.html
@@ -1,71 +1,77 @@
 {% extends 'vaccinerecordapp/navbar.html' %} {% block content %} {% load static %}
 
 <br>
-<div class="row" style="margin-left: 5%; margin-right: 5%">
-	<div class="col">
-		<div class="card card-body">
+<br />
+<br />
 
+<div class="container">
+<br>
+<!-- search filters-->
+<div class="row">
+	<div class="col-sm-4">
+		<div class="card card-body" style="width: 18rem;">
+			<h3 class="card-title">Search Patient</h3>
+			<br />
 			<form method="get">
-				{{myFilter.form}}
-
-		    <button class="btn btn-primary" type="submit">Search</button>
+				{{myFilter.form.as_p}}
+		    <button class="btn btn-primary" type="submit">
+				<i class="fas fa-search"></i>
+				Search</button>
 		  </form>
 
 		</div>
 	</div>
 	
-</div>
-<br>
 
-<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-	<a href="{% url 'register-patient' %}">
-	  <button class="btn btn-sm btn-outline-dark" >
-		  <i class="fas fa-folder-plus fa-lg"></i> 
-		  Create New Account
-	  </button>
-	</a>
-  </div>
-  
+	<!-- create button -->
+	<div class="col-sm-8">
 
-<div class="row">
-	<div class="col-md">
+		<!-- search results -->
 		<div class="card card-body">
-			<table class="table table-striped table-hover">
-				<tr>
-					<th>Record #</th>
-					<th>First Name</th>
-					<th>Last Name</th>
-					<th>Date of Birth</th>
-				</tr>
+			<h5 class="card-title">Results
+				<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+					<a href="{% url 'register-patient' %}">
+					<button class="btn btn-sm btn-outline-dark" >
+						<i class="fas fa-folder-plus fa-lg"></i> 
+						Create New Account
+					</button>
+					</a>
+				</div>
+			</h5>
+			<table class="table table-primary table-striped table-bordered table-sm table-hover">
+					<tr>
+						<th>Record #</th>
+						<th>First Name</th>
+						<th>Last Name</th>
+						<th>Date of Birth</th>
+					</tr>
 
-				{% for patient in patients %}
+					{% for patient in patients %}
 
-				<tr>
-					<td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.id}}</a></td>
-                    <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.last_name}}</a></td>
-                    <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.first_name}}</a></td>
-                    <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.bday}}</a></td>
-				</tr>
-				{% endfor %}
+					<tr>
+						<td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.id}}</a></td>
+						<td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.first_name}}</a></td>
+						<td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.last_name}}</a></td>
+						<td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.bday}}</a></td>
+					</tr>
+					{% endfor %}
 
 			</table>
+					<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+						<a href="{% url 'search-patient' %}"
+						<button class="btn btn-danger">
+							<i class="fas fa-times"></i>
+							Clear Search</button></a>
+					</div>
+
+			
 		</div>
+		
 	</div>
+
 </div>
 
-
-
-<!-- <table class="table table-striped table-hover">
-  <thead>
-      <tr>
-          <th scope="col">Record No#</th>
-          <th scope="col">Last Name</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Date of Birth</th>
-          <th scope="col">Doctor Assigned</th>
-      </tr>
-  </thead>
-</table> -->
+</div>
       
 
 
