--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
@@ -11,7 +11,7 @@
     
   </head>
 <body style="background-color:#f2f7fa">
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #1fbcff;">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #1fbcff">
         <div class="container-fluid">
           <div class = "topnav-left">
             <a class="navbar-brand" href="{% url 'dashboard' %}"><i class="fas fa-baby"></i></a>
