--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/home.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/home.html
@@ -8,12 +8,14 @@
     <title>Portal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}"/>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body >
 	
 	<div class="container h-100">
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
+				<span><i class="fas fa-baby d-flex fa-3x justify-content-center"></i></span>
 				<div class="d-flex justify-content-center">
 					<h3 id="form-title">BaQna login portal</h3>
 				</div>
@@ -44,15 +46,6 @@
 			</div>
 		</div>
 	</div>
-
-
-
-
-
-
-
-
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-      
 </body>
 </html>
